libs/extractor/tests/snapshots/snapshots/extractor__tests__extract_global_css_with_font_faces.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { globalCss } from \"@devup-ui/core\";\nglobalCss({\n  fontFaces: [\n    {\n      fontFamily: \"Roboto\",\n      src: \"url('/fonts/Roboto-Regular.ttf')\",\n      fontWeight: 400,\n    },\n    {\n      fontFamily: \"Roboto2\",\n      src: \"url('/fonts/Roboto-Regular.ttf')\",\n      fontWeight: 400,\n    }\n  ]\n})\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "Roboto",
                    "font-weight": "400",
                    "src": "url('/fonts/Roboto-Regular.ttf')",
                },
            },
        ),
        FontFace(
            ExtractFontFace {
                file: "test.tsx",
                properties: {
                    "font-family": "Roboto2",
                    "font-weight": "400",
                    "src": "url('/fonts/Roboto-Regular.ttf')",
                },
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n;\n",
}
