libs/extractor/tests/snapshots/snapshots/extractor__tests__extract_just_tsx.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\", \"const a = 1;\", ExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "const a = 1;",
}
